--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,38 @@
     <string name="already_have_an_account_login">already have an account? Login!</string>
     <string name="default_web_client_id">700288632026-rnm1dka5d5gqd6bc1tqcf7rej4b3v1jm.apps.googleusercontent.com</string>
     <string name="enter_password">Enter password</string>
+    <string name="workout">Workouts</string>
+    <string name="workout_name">Workout name</string>
+    <string name="new_workout">New workout</string>
+    <string name="workout_description">Workout description</string>
+    <string name="workout_date">Pick date</string>
+    <string name="ok">Ok</string>
+    <string name="cancel">Cancel</string>
+    <string name="confirm">Confirm</string>
+    <string name="no_internet_connection">No Internet Connection</string>
+    <string name="refresh">Refresh</string>
+    <string name="close">Close</string>
+    <string name="no_description">No description</string>
+    <string name="delete_workout">Delete workout</string>
+    <string name="are_you_sure_you_want_to_delete_this_workout">Are you sure you want to delete this workout?</string>
+    <string name="success">Success</string>
+    <string name="training_name_must_not_be_blank">Training name must not be blank</string>
+    <string name="no_workouts_available">No workouts available</string>
+    <string name="sign_in_successful">Sign in successful</string>
+    <string name="register_screen" translatable="false">Register_screen</string>
+    <string name="home_screen" translatable="false">Home_Screen</string>
+    <string name="login_screen" translatable="false">Login_Screen</string>
+    <string name="exercices_screen" translatable="false">Exercises_Screen</string>
+    <string name="back">back</string>
+    <string name="save_new_exercises">save new exercises</string>
+    <string name="list_of_exercises">List of exercises</string>
+    <string name="new_exercise">New exercise</string>
+    <string name="exercise_name">Exercise name</string>
+    <string name="no_exercises_available">No exercises available</string>
+    <string name="enter_your_password">Enter your password</string>
+    <string name="save">Save</string>
+    <string name="edit_workout_routine">Edit workout routine</string>
+    <string name="select_image">select image</string>
+    <string name="observations">Observations</string>
+    <string name="edit_exercise">Edit exercise</string>
 </resources>
